--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -135,6 +135,12 @@
     color: white;
     font-weight: 700;
 }
+.for_css_headerr{
+    display: flex;
+}
+.header_input_se{
+    width: 100%;
+}
 
 @media (max-width: 1200px) {
         .logooo{
