--- a/src/containers/homepag/style.scss
+++ b/src/containers/homepag/style.scss
@@ -3,7 +3,7 @@
     text-align: center;
     width: 100%;
     min-height: 100vh;
-    background: url(./e1a2a68c7497f63ff49678fa8056f460.jpg)center center/cover no-repeat;
+    background: url(./Sunset-San-and-Sea-Nature-Wallpaper.jpg)10px top/cover no-repeat;
     z-index: 0;
 }
 .home_subwraper{
