--- a/src/components/Header/MaterialUi/style.scss
+++ b/src/components/Header/MaterialUi/style.scss
@@ -16,10 +16,13 @@
     max-width: 90%;
     min-height: 200px;
     max-height: 90vh;
-    background: #fff;
+    background-color: rgba($color: #000000, $alpha: 1.0);
+    background: rgb(235,235,234);
+background: linear-gradient(90deg, rgba(235,235,234,1) 0%, rgba(11,56,101,1) 0%, rgba(48,47,37,0.8631827731092436) 100%, rgba(47,165,247,0.9668242296918768) 100%, rgba(200,219,232,0.9069248338870431) 100%);
     border-radius: 4px;
     margin: 0 auto;
     overflow-x: hidden;
+    opacity: 10;
 }
 .modalClose{
     position: absolute;
