--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -45,8 +45,8 @@
 .loginInputContainer{
   width: 70%;
   box-sizing: border-box;
-  padding: 0 30px;
-  margin: 40px 0;
+  /* padding: 0 10px; */
+  margin: 20% 0;
 }
 .searchInputContainer {
     width: 50%;
@@ -126,10 +126,10 @@
 .leftspace{
   width: 40%;
   height: 100%;
-  color: #fff;
+  color: rgb(8, 3, 3);
   letter-spacing: 1px;
   background-image: url('../Header/images/login_img_c4a81e.png');
-  background-color: #2874f0;
+  background-color: #ecedee;
   background-repeat: no-repeat;
   background-position: center 85%;
   padding: 40px 33px;
