--- a/src/components/Header/UI/card.scss
+++ b/src/components/Header/UI/card.scss
@@ -1,6 +1,6 @@
 .cardheader{
     // background-color: black;
-    color: white;
+    color: rgb(0, 0, 0);
     box-shadow: 4px 4px 4px white;
 }
 .card{
