--- a/src/containers/allChatrooms/style.scss
+++ b/src/containers/allChatrooms/style.scss
@@ -13,6 +13,7 @@
     padding: 10px;
     border: 2px solid white;
     margin-bottom: 10px;
+    word-wrap: break-word;
 }
 .chatroom_subcontainer{
     width: 40%;
@@ -24,6 +25,9 @@
     font-size: 20px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+// .user_descr{
+//     word-wrap: break-word;
+// }
 .title{
     color: rgb(22, 22, 22);
     font-size: 30px;
