--- a/src/containers/homepag/ProductListPage/ProductStore/style.scss
+++ b/src/containers/homepag/ProductListPage/ProductStore/style.scss
@@ -24,3 +24,8 @@
     display: flex;
     flex-wrap: wrap;
 }
+.product_store_wrapp{
+    width: 100%;
+    min-height: 100vh;
+    background: url(../../../../images/pexels-photo-459225.jpeg);
+}
