--- a/src/containers/homepag/productDetail/style.scss
+++ b/src/containers/homepag/productDetail/style.scss
@@ -1,4 +1,4 @@
-.productDescriptionContainer{
+.productDescriptionContainer,.product_subcontainer_for_bc{
     display: flex;
     box-sizing: border-box;
     padding: 10px;
@@ -53,14 +53,14 @@
 }
 .breed ul li a{
     text-decoration: none;
-    color: #fff;
+    color: black;
     display: inline-block;
     font-size: 12px;
     margin: 0 10px;
 }
 .productDetails{
     margin: 0 10px;
-    color: white;
+    color:black;
 }
 .productDetails .productTitle{
     font-size: 18px;
@@ -78,7 +78,7 @@
 }
 .ratingNumbersReviews{
     font-size: 12px;
-    color: #777;
+    color: rgb(8, 1, 1);
     font-weight: 600;
     display: inline-block;
     margin: 0 10px;
@@ -102,7 +102,7 @@
     color: white;
 }
 .productTitle{
-    color: #fff;
+    color: black;
 
 }
 .comentpicter_wraper{
@@ -169,10 +169,11 @@
     display: flex;
     justify-content: flex-start;
     padding: 10px;
-    background-color:rgba($color: #ffffff, $alpha: 0.4);
+    background-color:rgba($color: #080808, $alpha: 0.4);
 }
 .coments_wraper{
    border: 2px solid #ffffff;
+   box-shadow: 5px 3px 11px 13px #000000;
    padding: 0 20px 20px 0;
    max-width: 900px;
 text-overflow: ellipsis;
@@ -187,6 +188,25 @@ text-overflow: ellipsis;
 }
 .loaderr{
     border-color: black;
+}
+.for_back_descr{
+    width: 100%;
+    min-height: 100vh;
+    background: url(../../../images/lake-mcdonald-landscape-panorama-sunset-158385.jpeg) center center/cover no-repeat;
+}
+.product_subcontainer_for_bc{
+    width: 100%;
+    min-height: 100vh;
+    background-color:rgba($color: #000000, $alpha: 0.1);
+}
+.menuheater_linkkk{
+    color: white;
+    text-decoration: none;
+    padding: 4px;
+    background-color: rgba($color: #000000, $alpha: 0.4);
+    &:hover{
+        color: blue;
+    }
 }
 @media (max-width: 1000px) {
     
