--- a/src/containers/homepag/ProductListPage/ProductStore/style.scss
+++ b/src/containers/homepag/ProductListPage/ProductStore/style.scss
@@ -14,6 +14,7 @@
     border: 2px solid white;
     background-color: rgba($color: #030000, $alpha: 1.0);
     padding: 10px;
+    border-radius: 20px;
 }
 .rading_store{
     color: yellow;
