--- a/src/containers/homepag/productDetail/style.scss
+++ b/src/containers/homepag/productDetail/style.scss
@@ -7,13 +7,17 @@
     width: 67px;
     display: flex;
     flex-direction: column;
+    margin-right: 20px;
+    justify-content: flex-start;
 }
 .thumbnail{
     width: 63px;
     height: 63px;
-    border: 1px solid #f0f0f0;
+    border: 2px solid #f0f0f0;
     overflow: hidden;
     text-align: center;
+    margin-bottom: 4px;
+    border-radius: 5px;
 }
 .thumbnail img{
     max-width: 100%;
@@ -32,6 +36,9 @@
     overflow: hidden;
     text-align: center;
     border: 1px solid #f0f0f0;
+    border-radius: 20px;
+    padding: 5px 0;
+    box-shadow: 2px 3px 5px 5px #804a4a;
 }
 .productDescImgContainer > img{
     max-width: 100%;
@@ -170,6 +177,7 @@
     justify-content: flex-start;
     padding: 10px;
     background-color:rgba($color: #080808, $alpha: 0.4);
+    border-radius: 10px;
 }
 .coments_wraper{
    border: 2px solid #ffffff;
@@ -177,6 +185,7 @@
    padding: 0 20px 20px 0;
    max-width: 900px;
 text-overflow: ellipsis;
+border-radius: 20px;
 }
 .zoomi_image{
     width: 100%;
