--- a/src/containers/homepag/style.scss
+++ b/src/containers/homepag/style.scss
@@ -17,23 +17,26 @@
 }
 .main_page_item{
     position: relative;
-    width: 40%;
-    background-color:rgba($color: #000000, $alpha: 0.7);
-    height: 50vh;
+    width: 28%;
+    background-color:rgba($color: #0f0202, $alpha: 0.8);
+    height: 30vh;
     margin: 10px;
+    // margin-left: 120px;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 2px 2px 2px 2px white;
     overflow: hidden;
+    margin-bottom: 40px;
+    padding: 20px;
 }
 .mainpage_item_image{
    position: absolute;
    bottom: 10px;
    right: 25%;
-  max-width: 50%;
-   height: 90%;
+  max-width: 40%;
+   height: 70%;
    border-radius: 20px;
-   
+   margin-top: 10px;
 }
 .main_page_container{
     display: flex;
