--- a/src/containers/homepag/productDetail/style.scss
+++ b/src/containers/homepag/productDetail/style.scss
@@ -37,7 +37,7 @@
     text-align: center;
     border: 1px solid #f0f0f0;
     border-radius: 20px;
-    padding: 5px 0;
+    padding: 7px;
     box-shadow: 2px 3px 5px 5px #804a4a;
 }
 .productDescImgContainer > img{
