--- a/src/containers/homepag/style.scss
+++ b/src/containers/homepag/style.scss
@@ -59,16 +59,100 @@
     display: flex;
     justify-content: space-between;
 }
+.main_page_item_m{
+    position: relative;
+    width: 28%;
+    min-width: 150px;
+    height: 30vh;
+    margin: 10px;
+    overflow: hidden;
+    margin-bottom: 40px;
+    padding: 20px;
+    background: rgb(2,0,36);
+    border-radius: 15px;
+    box-shadow: 2px 2px 6px 5px black;
+background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(2,0,38,1) 99%, rgba(9,9,121,1) 100%, rgba(0,212,255,1) 100%);
+    &:hover{
+        >.mainpage_item_link_m{
+            >.product_informat_m{
+                transform: translateY(0%);
+            }
+        }
+       
+    }
+}
+.mainpage_item_image_m{
+    position: absolute;
+    left: 1%;
+    top: 15px;
+   height: 80%;
+   min-width: 20%;
+    max-width:50%;
+   z-index: 0;
+   border-radius: 15px;
+}
+.mainpage_item_image_secnt_m{
+    position: absolute;
+    right: 1%;
+    top: 15px;
+    min-width: 20%;
+    max-width:50%;
+   height: 80%;
+   z-index: 0;
+}
+.home_page_images_wraper{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+.product_informat_m{
+    background-color:rgba($color: #fff5f5, $alpha: 0.7);
+    text-align: center;
+    position: absolute;
+    // z-index: 20;
+    width: 100%;
+    height: 100%;
+    color: rgb(10, 10, 10);
+    font-size: 17px;
+    font-weight: 700;
+    text-decoration: none;
+    left: 0;
+    top: 0;
+    padding-top: 10px;
+    padding-right: 10px;
+    word-wrap: break-word;
+    transform: translateY(100%);
+    transition: 2s all;
+    
+}
+
+// .mainpage_item_link_m{
+//     z-index: 20;
+//     background-color:rgba($color: #000000, $alpha: 0.3);
+//     z-index: 20;
+//     width: 100%;
+//     height: 100%;
+// }
+
+
 @media (max-width: 1200px) {
    .mainpage_item_image{
        height: 60%;
 
    }
+   
    .product_nameeee{
        width: 70%;
    }
 }
+
+    @media (max-width: 700px) {
+        .product_informat_m{
+            font-size: 12px;
+        }
+    }
 @media (min-width: 700px) {
+    
     .mainpage_item_image{
         
         &:hover{
