--- a/src/components/Header/meniuHeader/style.scss
+++ b/src/components/Header/meniuHeader/style.scss
@@ -31,7 +31,7 @@ background: linear-gradient(90deg, rgba(235,235,234,1) 0%, rgba(92,92,139,0.7819
   font-weight: bold;
   font-family: sans-serif;
   color: white;
-  box-shadow: 1px 1px 2px 2px white;
+  // box-shadow: 1px 1px 2px 2px white;
   margin-top: 5px;
   margin-bottom: 5px;
   padding-left: 10px;
@@ -41,6 +41,9 @@ background: linear-gradient(90deg, rgba(235,235,234,1) 0%, rgba(92,92,139,0.7819
 .menuHeader > ul > li > span:hover {
   color: #d4dceb;
   background-color: rgb(165, 37, 37);
+}
+.menuHeader > ul > li > span{
+  cursor: default;
 }
 .categor_show_hide {
   cursor: pointer;
@@ -76,22 +79,22 @@ background: linear-gradient(90deg, rgba(235,235,234,1) 0%, rgba(16,26,37,0.78475
 .menuHeader > ul > li > ul > li > a {
   text-decoration: none;
   font-weight: bold;
-  color: rgb(15, 2, 2);
-  margin: 10px 0;
+  color: rgb(15, 2, 2);  
+  margin: 10px 5px;
   display: block;
 }
 .menuHeader > ul > li > ul > li a {
   text-decoration: none;
   color: white;
   display: block;
-  margin: 5px 0;
+  margin: 5px ;
   font-size: 19px;
 }
 .menuheater_link {
   padding: 7px;
   background-color: rgb(20, 19, 19);
-    border-radius: 5px;
-    margin-right: 10px;
+  border-radius: 5px;
+  margin-right: 10px;
   &:hover {
     background-color: rgb(207, 186, 186);
     color: black;
