--- a/src/containers/homepag/style.scss
+++ b/src/containers/homepag/style.scss
@@ -64,6 +64,7 @@
     width: 28%;
     min-width: 150px;
     height: 30vh;
+    animation: mainitem 5s infinite;
     margin: 10px;
     overflow: hidden;
     margin-bottom: 40px;
@@ -71,7 +72,7 @@
     background: rgb(2,0,36);
     border-radius: 15px;
     box-shadow: 2px 2px 6px 5px black;
-background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(2,0,38,1) 99%, rgba(9,9,121,1) 100%, rgba(0,212,255,1) 100%);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(2,0,38,1) 99%, rgba(9,9,121,1) 100%, rgba(0,212,255,1) 100%);
     &:hover{
         >.mainpage_item_link_m{
             >.product_informat_m{
@@ -134,7 +135,40 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(2,0,38,1) 99%, rgba(9
 //     height: 100%;
 // }
 
+@keyframes mainitem {
+    0% {
+        background: rgb(235,235,234);
+        background: linear-gradient(90deg, rgba(235,235,234,1) 0%, rgba(11,56,101,1) 0%, rgba(48,47,37,0.8631827731092436) 100%, rgba(47,165,247,0.9668242296918768) 100%, rgba(200,219,232,0.9069248338870431) 100%);
+    }
+  
+    25% {
+        background: rgb(235,235,234);
+background: linear-gradient(90deg, rgba(235,235,234,1) 0%, rgba(95,118,142,1) 0%, rgba(48,47,37,0.8631827731092436) 100%, rgba(47,165,247,0.9668242296918768) 100%, rgba(200,219,232,0.9069248338870431) 100%);
+        
+    }
+    50% {
+        background: rgb(235,235,234);
+background: linear-gradient(90deg, rgba(235,235,234,1) 0%, rgba(35,65,96,1) 0%, rgba(48,47,37,0.8631827731092436) 100%, rgba(47,165,247,0.9668242296918768) 100%, rgba(200,219,232,0.9069248338870431) 100%);
+        
+    }
+    75% {
+        background: rgb(235,235,234);
+background: linear-gradient(90deg, rgba(235,235,234,1) 0%, rgba(37,44,51,1) 0%, rgba(48,47,37,0.8631827731092436) 100%, rgba(47,165,247,0.9668242296918768) 100%, rgba(200,219,232,0.9069248338870431) 100%);
+        
+    }
+    100% {
+        background: rgb(235,235,234);
+        background: linear-gradient(90deg, rgba(235,235,234,1) 0%, rgba(11,56,101,1) 0%, rgba(48,47,37,0.8631827731092436) 100%, rgba(47,165,247,0.9668242296918768) 100%, rgba(200,219,232,0.9069248338870431) 100%);
+ 
+      }
+  }
 
+@media (max-width: 1200px) {
+        .logooo{
+            display: none;
+        }
+        
+}
 @media (max-width: 1200px) {
    .mainpage_item_image{
        height: 60%;
