--- a/src/components/Header/meniuHeader/style.scss
+++ b/src/components/Header/meniuHeader/style.scss
@@ -31,7 +31,7 @@ background: linear-gradient(90deg, rgba(235,235,234,1) 0%, rgba(92,92,139,0.7819
   font-weight: bold;
   font-family: sans-serif;
   color: white;
-  // box-shadow: 1px 1px 2px 2px white;
+  box-shadow: 2px 2px 1px 1px white;
   margin-top: 5px;
   margin-bottom: 5px;
   padding-left: 10px;
