--- a/src/containers/homepag/ProductListPage/ClothingAndAccessories/style.scss
+++ b/src/containers/homepag/ProductListPage/ClothingAndAccessories/style.scss
@@ -36,6 +36,11 @@
 .card_header_clout{
     display: flex;
 }
+
+.product_dont_found_cat{
+    color: red;
+    font-size: 30px;
+}
 .clout_wraper{
     display: flex;
     box-shadow: 5px 8px 15px 11px #000000;
