--- a/src/containers/homepag/productDetail/style.scss
+++ b/src/containers/homepag/productDetail/style.scss
@@ -123,6 +123,59 @@
     justify-content: center;
     align-items: center;
     overflow: hidden;
+    position: relative;
+}
+.delete_coment{
+    position: absolute;
+    top: 10px;
+    font-size: 20px;
+    right: 10px;
+    color: black;
+    cursor: pointer;
+    &:hover{
+        color: white;
+        font-size: 24px;
+    }
+}
+.like_coment{
+    position: absolute;
+    bottom: 4px;
+    right: 10px;
+    color: rgb(248, 36, 36);
+    font-size: 37px;
+   
+    animation: heartt2 2s infinite;
+
+    cursor: pointer;
+    &:hover{
+        transition: 1s;
+        color: blue;
+    }
+}
+.likes_count{
+    position: absolute;
+    bottom: 14px;
+    font-size: 20px;
+    right: 22px;
+    cursor: pointer;
+}
+@keyframes heartt {
+    from{
+        transform: scale(1);
+    }
+    to{
+        transform: scale(1.2);
+    }
+}
+@keyframes heartt2 {
+    from{
+        color: blue;
+        transform: scale(1);
+    }
+    to{
+      color: brown;
+      transform: scale(1.2);
+    }
 }
 .coment_descr{
     color: #fff;
@@ -228,7 +281,15 @@ border-radius: 20px;
  }
 
  @media (max-width: 700px) {
-    
+    .like_coment{
+        left: 10px;
+        font-size: 30px;
+    }
+    .likes_count{
+        left: 20px;
+        font-size: 20px;
+        bottom: 10px;
+    }
     .flex_colum{
         flex-direction: column;
     }
