--- a/src/containers/homepag/productDetail/style.scss
+++ b/src/containers/homepag/productDetail/style.scss
@@ -32,7 +32,7 @@
 }
 .productDescImgContainer{
     width: 70%;
-    
+    max-height: 650px;
     overflow: hidden;
     text-align: center;
     border: 1px solid #f0f0f0;
@@ -257,6 +257,8 @@ border-radius: 20px;
     width: 100%;
     height: 100%;
     object-fit: contain;
+    max-height: 500px;
+    min-height: 400px;
 }
 .coment_descr{
     word-wrap: break-word;
