--- a/src/components/Header/UI/loader.scss
+++ b/src/components/Header/UI/loader.scss
@@ -85,6 +85,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 20000000;
   }
   @keyframes lds-roller {
     0% {
