--- a/src/containers/search/style.scss
+++ b/src/containers/search/style.scss
@@ -15,10 +15,11 @@
   flex-wrap: wrap;
 }
 .product_img_cont {
-  width: 100px;
-  height: 100px;
+  max-width: 50%;
+  height: 100%;
   overflow: hidden;
   margin: 10px;
+  transition: 1s all;
 }
 .product_img {
   max-width: 100%;
@@ -28,6 +29,7 @@
 }
 .producti_container {
   width: 30%;
+  position: relative;
   background: rgb(235, 235, 234);
   background: rgba($color: #0e0e0e, $alpha: 0.3);
   border: 4px solid black;
@@ -38,8 +40,40 @@
   margin: 10px;
   overflow: hidden !important;
   text-overflow: ellipsis;
+  &:hover{
+    >a {
+     >.product_img_cont{
+      transform: translateY(0%);
+      animation: tran 0s;
+     }
+   
+    }
+  }
+}
+.product_img_cont {
+  position: absolute;
+  left: 0%;
+  top: 0;
+  transform: translateY(-200%);
+}
+@keyframes tran{
+    25%  {
+        height: 70%;
+    }
+    70%{
+          height: 80%;
+    }
+    100%{
+      height: 100%;
+}
 }
 .prod_descr {
+  padding: 15px;
+  text-decoration: none;
+  overflow: hidden !important;
+  text-overflow: ellipsis;
+}
+.prod_descrre{
   padding: 15px;
   text-decoration: none;
   overflow: hidden !important;
@@ -54,6 +88,14 @@
   white-space: nowrap;
   overflow: hidden !important;
   text-overflow: ellipsis;
+}
+.prod_descr_spann {
+  max-width: 50%;
+  display: inline-block;
+  white-space: nowrap;
+  overflow: hidden !important;
+  text-overflow: ellipsis;
+  color: white;
 }
 .product_name {
   margin: 10px;
