--- a/src/components/paginateComent/pagin.scss
+++ b/src/components/paginateComent/pagin.scss
@@ -1,20 +1,14 @@
-.pagination{
-    display: flex;
-    justify-content: space-around;
-    background-color: rgba($color: #000000, $alpha: 0.4);
-    padding: 5px 0;
-}
 .item_pa{
     list-style: none;
     background-color: rgb(202, 64, 64);
-    font-size: 25px;
-    padding: 4px;
-   
+    font-size: 20px;
+    padding: 6px;
+    border-radius: 50%;
     box-shadow: 2px 2px 2px 2px black;
     cursor: pointer;
     &:hover{
         background-color: #fff;
-       
+        border-radius: 30px;
     }
 }
 .activeclasss{
