--- a/src/containers/allChatrooms/style.scss
+++ b/src/containers/allChatrooms/style.scss
@@ -1,7 +1,7 @@
 .chatrommcontain{
     width:100%;
     min-height: 100vh;
-    background: url('./pexels-photo-1563356.jpeg')center center/cover no-repeat;
+    background: url('./ezgif.com-gif-maker.gif')center center/cover ;
     z-index: -6;
     overflow-y: scroll;
 }
