--- a/src/containers/chatroom/style.scss
+++ b/src/containers/chatroom/style.scss
@@ -46,6 +46,18 @@
     margin: 0 auto;
     overflow: scroll;
 }
+.adminMessage{
+    position: absolute;
+    left: 40%;
+    background-color: rgb(219, 162, 162);
+    padding: 3px;
+    min-width: 10%;
+    overflow: hidden;
+    word-wrap: break-word;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 500;
+}
 .chat_bottom{
    
     right: 0;
@@ -140,6 +152,15 @@
     display: flex;
     justify-content: space-between;
 }
+// .inpu_message_rel{
+//     display: block;
+//     position: relative;
+// }
+// .adminMessage{
+//     position: absolute;
+//     bottom: 0;
+//     left: 40%;
+// }
 @media (max-width: 1000px) {
    
    .chat_wraper{
