--- a/src/containers/chatroom/style.scss
+++ b/src/containers/chatroom/style.scss
@@ -47,13 +47,16 @@
     overflow: scroll;
 }
 .adminMessage{
-    position: absolute;
-    left: 40%;
+
+
     background-color: rgb(219, 162, 162);
     padding: 3px;
     min-width: 10%;
+    max-width: 60%;
+    margin: 0 auto;
     overflow: hidden;
     word-wrap: break-word;
+    margin-bottom: -10px;
     text-align: center;
     font-size: 20px;
     font-weight: 500;
@@ -152,15 +155,7 @@
     display: flex;
     justify-content: space-between;
 }
-// .inpu_message_rel{
-//     display: block;
-//     position: relative;
-// }
-// .adminMessage{
-//     position: absolute;
-//     bottom: 0;
-//     left: 40%;
-// }
+
 @media (max-width: 1000px) {
    
    .chat_wraper{
