--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -165,7 +165,27 @@
 .messages_kofo{
         animation: message 2s infinite;
 }
-
+input[type="file"] {
+    display: none;
+}
+.styled_file_upload{
+    border: 1px solid #ccc;
+    display: inline-block;
+    cursor: pointer;
+    width: 300px;
+    display: block;
+    height: 20px;
+    background-color: black;
+    color: rgb(175, 156, 156);
+    height: 40px;
+    border-radius: 10px;
+    margin-bottom: 10px;
+    letter-spacing: 1px;
+    min-width: 160px;
+    text-align: center;
+    padding-top: 4px;
+    overflow: hidden;
+}
 @keyframes dollarrr {
     0% {
       transform: scale(1);
