--- a/src/containers/homepag/style.scss
+++ b/src/containers/homepag/style.scss
@@ -110,13 +110,12 @@
     justify-content: space-around;
 }
 .product_informat_m{
-    background-color:rgba($color: #fff5f5, $alpha: 0.5);
+    background-color:rgba($color: #ebb4b4, $alpha: 0.5);
     text-align: center;
     position: absolute;
-    // z-index: 20;
     width: 100%;
     height: 100%;
-    color: rgb(10, 10, 10);
+    color: rgb(20, 20, 22);
     font-size: 17px;
     font-weight: 700;
     text-decoration: none;
@@ -127,16 +126,12 @@
     word-wrap: break-word;
     transform: translateY(100%);
     transition: 2s all;
-    
+    box-shadow: 2px 2px 10px 4px white;
 }
-
-// .mainpage_item_link_m{
-//     z-index: 20;
-//     background-color:rgba($color: #000000, $alpha: 0.3);
-//     z-index: 20;
-//     width: 100%;
-//     height: 100%;
-// }
+.product_nameeee_m{
+    background-color: rgba($color: #d1c0c0, $alpha: 0.7);
+    border-radius: 10px;
+}
 @keyframes mainitem {
     0% {
         background: rgb(235,235,234);
